[project]
name = "pygameTDS"
version = "1.01.alpha"
requires-python = ">=3.11"
dependencies = [
    "pygame>=2.6.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "ruff>=0.8.4",
]
[tool.ruff]
# Allow lines to be as long as 120.
line-length = 120

[tool.ruff.format]
# Prefer single quotes over double quotes.
quote-style = "single"

[tool.ruff.lint]
select = [
    "COM",  # flake8-commas
    "E",  # pycodestyle
    "F",  # Pyflakes
    "I",  # isort
    "Q",  # flake8-quotes
    "W",  # pycodestyle warnings
]
ignore = [
     # Rules that conflict with Ruff formatter
    "COM812",  # Trailing comma missing
    "ISC001",  # Implicitly concatenated string literals on one line
    # Rules that conflict with `quote-style = "single"`
    "Q000",  # Single quotes found but double quotes preferred
    "Q003",  # Change outer quotes to avoid escaping inner quotes
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
